--- a/noumena/2023/december/index.org
+++ b/noumena/2023/december/index.org
@@ -22,7 +22,7 @@
   <a href="/noumena/2023/december/01">1</a>
   <a href="/noumena/2023/december/02">2</a>   <a href="/noumena/2023/december/03">3</a>   <a href="/noumena/2023/december/04">4</a>   <a>5</a>   <a href="/noumena/2023/december/06">6</a>   <a href="/noumena/2023/december/07">7</a>   <a href="/noumena/2023/december/08">8</a>
   <a>9</a>   <a>10</a>   <a>11</a>   <a>12</a>   <a href="/noumena/2023/december/13">13</a>   <a>14</a>   <a href="/noumena/2023/december/15">15</a>
-  <a href="/noumena/2023/december/16">16</a>   <a href="/noumena/2023/december/17">17</a>   <a>18</a>   <a>19</a>   <a>20</a>   <a>21</a>   <a>22</a>
+  <a href="/noumena/2023/december/16">16</a>   <a href="/noumena/2023/december/17">17</a>   <a href="/noumena/2023/december/18">18</a>   <a href="/noumena/2023/december/19">19</a>   <a>20</a>   <a>21</a>   <a>22</a>
   <a>23</a>   <a>24</a>   <a>25</a>   <a>26</a>   <a>27</a>   <a>28</a>   <a>29</a>
   <a>30</a>   <a>31</a> </div>
 #+end_export
