--- a/workout-routine/index.org
+++ b/workout-routine/index.org
@@ -1,27 +1,29 @@
-* Monday
+# -*- org-html-checkbox-type: html -*-
 
-- [ ] pushups | 4 x 8-12
-- [ ] pike walks | 4 x 8-12
-- [ ] tricep extensions | 4 x 8-12
-- [ ] pullups | 4 x 8-12
-- [ ] squats | 4 x 15-20
-- [ ] leg raises | 4 x 15-20
+* Monday & Thursday
+
+- [ ] pushups | 2 x 8-12
+- [ ] squats | 2 x 15-20
+- [ ] tricep extensions | 2 x 8-12
+- [ ] leg raises | 2 x 15-20
+- [ ] pike pushups | 2 x 8-12
+- [ ] pullups | 2 x 8-12
 
 
-* Wednesday
+* Tuesday & Friday
 
-- [ ] chinups | 4 x 8-12
-- [ ] lat slides | 4 x 8-12
-- [ ] bicep dip | 4 x 8-12
-- [ ] diamond pushups | 4 x 8-12
-- [ ] lunges | 4 x 15-20
+- [ ] chinups | 2 x 8-12
+- [ ] lat slides | 2 x 8-12
+- [ ] bicep dip | 2 x 8-12
+- [ ] diamond pushups | 2 x 8-12
+- [ ] lunges | 2 x 15-20
 - [ ] crunches | to failure
 
-* Friday
+* Wednesday & Saturday
 
-- [ ] pistol squats | 4 x 15-20
-- [ ] side lunges | 4 x 15-20
-- [ ] windshield wipers | 4 x 15-20
-- [ ] hollow body hold | 4 x 40-60 sec
-- [ ] pike pushups | 4 x 8-12
-- [ ] pullups | 4 x 8-12
+- [ ] pistol squats | 2 x 15-20
+- [ ] windshield wipers | 2 x 15-20
+- [ ] pike pushups | 2 x 8-12
+- [ ] side lunges | 2 x 15-20
+- [ ] hollow body hold | 2 x 40-60 sec
+- [ ] pullups | 2 x 8-12
