Adding the previous week

--- a/noumena/firsts/index.org
+++ b/noumena/firsts/index.org
@@ -3,6 +3,7 @@
 
 * Firsts
 
+ * [[https://joshua-wood.dev/noumena/2023/december/22/][December 22, 2023: First Independent Breakfast And Dinner At Toddler Table]]
  * [[https://joshua-wood.dev/noumena/2023/october/31/#first-trick-or-treat][October 31, 2023: Noumena's first trick or treat]]
  * [[https://joshua-wood.dev/noumena/2023/september/30/#first-use-of-fork][September 30, 2023: Noumena First Uses a Fork To Eat Tofu Scramble]]
  * [[https://joshua-wood.dev/noumena/2023/september/09/#:~:text=One%20of%20the%20reasons%20I%20lost%20the%20time%20is%20that%20she%20first%20says%20%22yellow%22%20when%20I%20show%20her%20something%20yellow][September  9, 2023: Noumena first says "Yellow"]]
