--- a/noumena/2024/january/01/index.org
+++ b/noumena/2024/january/01/index.org
@@ -11,13 +11,13 @@
 
 Humanity has a very peculiar quirk. As time moves on and we settle into routines, a lot of the magic in every moment is lost. That's often   why novelty is such a thrill. New experiences---new emotions. Some of us get addicted to it and make all sorts of decisions---good or bad--because of it.
 
-I remember when Noumena was born and I first held her in my arms. Until I was a father, I never wanted to be one. The moment I held her in my arms, my whole world, everything I thought I knew about myself collapsed around me and I let out a yelp unable to contain the tidal wave of emotion. She was the most beautiful thing I'd ever laid eyes on. A beautiful new born, only 7 pounds, was enough to take a 32 year old man and crumple him into dust effortlessly.
+I remember when Noumena was born and I first held her in my arms. Until I was a father, I never wanted to be one. The moment I held her in my arms, my whole world, everything I thought I knew about myself collapsed around me and I let out a yelp unable to contain the tidal wave of emotion. She was the most beautiful thing I'd ever laid eyes on. A beautiful newborn, only 7 pounds, was enough to take a 32 year old man and crumple him to dust effortlessly.
 
-But as the days go by, these moments fade from presentness to mind. It may just as well be---if I was overcome at all times the way I was when Noumena was born, nothing would get done! Still, they oughtn't go unappreciated. Part of it what made me cry out in the delivery room was the fact that it was new. Until then, I'd never felt a love so pure, unadulterated and intense. I'd never before felt that I wanted to give my soul to this little human and do everything in my power to protect and guide her through life.
+But as the days go by, these moments fade from presentness to mind. It may just as well be---if I was overcome at all times the way I was when Noumena was born, nothing would get done! Still, they oughtn't go unappreciated. Part of it what made me cry out in the delivery room was the fact that it was new. Until then, I'd never felt a love so pure---unadulterated and intense. I'd never before felt that I wanted to give my soul to this little human and do everything in my power to protect and guide her through life.
 
-That love hasn't left in any way. It burns like a raging fire deep within my soul each and every passing day. But often I realize that I've grown accustomed to the flames. That same love doesn't cause outbursts of tears at every moment since. It feels like I'm taking it for granted. Maybe sometimes I am. But it doesn't have to be so.
+That love hasn't faded in any way. It burns like a raging fire deep within my soul each and every passing day. But often I realize that I've grown accustomed to the flames. That same love doesn't cause outbursts of tears at every moment since. It feels like I'm taking it for granted. Maybe sometimes I am. But it doesn't have to be so.
 
-Imagine if at every difficulty one were to have while raising their child, those memories crashed to mind with the same tidal force as the first experience. How much more understanding, empathetic and compassionate would they be? How could they maintain their frustration or anger or whatever litany of emotions come with the rearing of offspring? I don't know the answers to these questions, but what I do know is that the child that's causing all that grief and maybe heartache is the same child that clawed its way into their very soul the day they'd met. Even amidst the turmoil, we have our kids and they have us and the very experience we're having is new. Never been had before in exactly the same way.
+Imagine if at every difficulty one were to have while raising their child, those memories crashed to mind with the same tidal force as the first experience. How much more understanding, empathetic and compassionate would they be? How could they maintain their frustration or anger or whatever litany of emotions come with the rearing of offspring? I don't know the answers to these questions, but what I do know is that the child that's causing all that grief and maybe heartache is the very same child that clawed her way into their very soul the day they'd met. Even amidst the turmoil, we have our kids and they have us, and the very experience we're having is new. Never been had before in exactly the same way.
 
 We forget that this profoundly intimate moment we're having will be lost to the sands of time as with every other new experience. Our minds play tricks on us and we don't realize we're capable of having the same appreciation for our wonderful child that we had when our eyes met theirs for the very first time. After all, despite the monotony of daily life and amidst the struggles, the love never goes away and never dissipates. We are tricked by circumstance into not recognizing it in these moments but it's always there. We go through life with a burning flame deep in us that we're so used to, we don't notice in the same way we noticed when it was ignited. Sometimes we catch glimpses of it, but, in every moment, it's always there and always just as warm.
 
