--- a/noumena/2024/january/27/index.org
+++ b/noumena/2024/january/27/index.org
@@ -7,6 +7,8 @@
 #+HTML_HEAD_EXTRA:<meta property="og:description" content="">
 #+HTML_HEAD_EXTRA:<meta name="twitter:image" content="https://joshua-wood.dev/noumena/2024/january/27/Laying-On-Daddys-Bed-2.jpg" />
 
+[[file:Laying-On-Daddys-Bed-2.jpg]]
+
 * Good Morning, Noumena!
 
 #+begin_export html
