add last couple days

--- a/noumena/2023/september/09/index.org
+++ b/noumena/2023/september/09/index.org
@@ -104,6 +104,9 @@ While she was napping, I cooked up some tofu scramble. I also prepared an avocad
 Also while she was napping, Noumena's mother decided she was going to come back early from her weekend trip and spend time with Noumena, so I told her we were going to tree hill nature center and she later met us there.
 
 * Tree Hill Nature Center
+:PROPERTIES:
+:CUSTOM_ID: tree-hill-nature-center
+:END:
 
 Just before we exit the door, I set Noumena down since Kisa is laying on the Adirondack chairs on our porch. As Noumena approaches, Kisa removes herself from the chair. Noumena follows and ends up seated on the porch with Kisa in front of her.
 
