--- a/noumena/index.org
+++ b/noumena/index.org
@@ -1,6 +1,7 @@
 #+TITLE: Noumena By Year
-#+INCLUDE: ~/org/blog/noumena/header.org
-#+HTML_HEAD_EXTRA:     <link rel="manifest" href="/noumena/manifest.json">
+#+HTML_HEAD_EXTRA: <link rel="manifest" href="/noumena/manifest.json">
+#+OPTIONS: num:nil ^:{}
 
+** [[file:2022][2022]]
 ** [[file:2023][2023]]
 ** [[file:2024][2024]]
